Fixed Layout Spacing

--- a/src/components/ai-powered.module.css
+++ b/src/components/ai-powered.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     background: #ffffff;
-    /* height: 100%; */
+    margin: 118px 0;
     width: 100%;
 }
 
@@ -49,7 +49,6 @@
     grid-template-columns: repeat(4, 1fr);
     justify-content: center;
     align-items: center;
-    gap: 40px;
     text-align: left;
 }
 
@@ -57,7 +56,7 @@
 .card {
     display: grid;
     grid-template-rows: 80px 60px auto;
-    /* width: 225px; */
+    height: 340px;
     width: 75%;
 }
 
